<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">KrizBook</string>
    <string name="razorpayAPIKey" translatable="false">Enter razorpay API key here...</string>
    <string name="facebook_app_id" translatable="false">666068755458087</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb666068755458087</string>
    <string name="facebook_client_token" translatable="false">a39c0eb7c70bf6038cba302f0829f980</string>
    <string name="web_client_id" translatable="false">815384928117-qij33clf0t2mgin6ndqv7r1b5gqbcg3h.apps.googleusercontent.com</string>
    <string name="Secrate" translatable="false">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</string>
    <string name="msg_for_checkbox" translatable="false">Before continue to this app, please accept these policies.</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="wel_one">Best Book for you</string>
    <string name="wel_two">Best Magazine for you</string>
    <string name="wel_three">Become a Author</string>
    <string name="wel_four">Payment Gateway &amp; Wallet</string>
    <string name="wel_sub_one">From Classic to Contemopory you will find everything here</string>
    <string name="wel_sub_two">The best Magazine Collections available here</string>
    <string name="wel_sub_three">User become Author &amp; publish own Books / Magazine on Application</string>
    <string name="wel_sub_four">To Buy a Paid book using Wallet &amp; Managed by Payment gateways</string>
    <string name="sorry_not_connected_to_internet">Sorry! Not connected to internet.</string>
    <string name="internet_error">Network connection error!!!</string>
    <string name="permission_necessary">Permission Necessary</string>
    <string name="storage_permission_is_necessary_to_wrote_event">Storage permission is necessary to read and write event</string>
    <string name="settings">Settings</string>
    <string name="cancel_">Cancel</string>
    <string name="permission">Permission</string>
    <string name="permission_alert">Permission Alert</string>
    <string name="we_need_storage_permission_for_save_video">We need storage permission for save media file into external storage.</string>
    <string name="we_need_storage_and_camera_permission_for_upload_profile_pic">We need external storage and camera permission for upload profile picture.</string>
    <string name="yesterday">yesterday</string>
    <string name="day_ago">day ago</string>
    <string name="email">Email Address</string>
    <string name="email_hint">Email</string>
    <string name="password">Password</string>
    <string name="remember">Remember Me</string>
    <string name="login">Login</string>
    <string name="skip1">Skip</string>
    <string name="dont">Don\'t have an account ?</string>
    <string name="signup">Signup</string>
    <string name="enter_email">Enter email.</string>
    <string name="enter_password">Enter password.</string>
    <string name="enter_phone_number">Enter phone number.</string>
    <string name="enter_fullname">Enter fullname.</string>
    <string name="enter_valid_email">Enter valid email.</string>
    <string name="guest_user">Guest User</string>
    <string name="send">Send</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="new_password_have_been_send_to_register_email_address">New password have been send to register email address.</string>
    <string name="full_name">Full Name</string>
    <string name="phone">Phone</string>
    <string name="signup_cap">SIGN UP</string>
    <string name="already_account">Already have an account yet?</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="enter_your_mobile_no">Enter Your Mobile number</string>
    <string name="enter_otp">Enter received OTP.</string>
    <string name="enter_coutry_code">Enter your country code.</string>
    <string name="you_will_receive_a_4_digit_code_to_verify_next">You will receive a 6 digit code to \n verify next.</string>
    <string name="send_otp">SEND OTP</string>
    <string name="enter_otp_code_to_sent_to_mobile_no">Enter OTP code to sent \n to Mobile number.</string>
    <string name="verify_and_proceed">VERIFY &amp; PROCEED</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="Company">Company</string>
    <string name="website">Website</string>
    <string name="Contact">Contact</string>
    <string name="Category">Category</string>
    <string name="Categories">Categories</string>
    <string name="View_all">More</string>
    <string name="app_bestBook">EBook Best</string>
    <string name="New_Arrival_Book">New Arrival Book</string>
    <string name="You_may_also_like">You may also Like</string>
    <string name="Authors">Authors</string>
    <string name="Free_Book">Free Releases</string>
    <string name="Paid_Book">Paid Releases</string>
    <string name="Continue_Reading">Continue Reading</string>
    <string name="Popular_Stories">Popular Stories</string>
    <string name="Magazine_category">Magazine Categories</string>
    <string name="Top_dowloaded">Top Downloaded</string>
    <string name="Most_viewed">Most Viewed</string>
    <string name="Search">Search</string>
    <string name="See_All">See All</string>
    <string name="Payment">Payment</string>
    <string name="Please_select_any_payment_method">Please select any payment method</string>
    <string name="CONTINUE">CONTINUE</string>
    <string name="Books">Books</string>
    <string name="book">Book : </string>
    <string name="book_author">Book Author : </string>
    <string name="information_of_book">Information of Book</string>
    <string name="magazine">Magazine : </string>
    <string name="magazine_author">Magazine Author : </string>
    <string name="information_of_magazine">Information of Magazine</string>
    <string name="Reviews">Reviews</string>
    <string name="Downloads">Downloads</string>
    <string name="Book_Details">Book Details</string>
    <string name="Earn_Rewards">Earn Rewards</string>
    <string name="Vouchers_History">Vouchers History</string>
    <string name="What_is_this_book_about">What is this Book about ?</string>
    <string name="book_introduction">Book Introduction</string>
    <string name="thanks_for_feedback">Thank you for your valuable feedback.</string>
    <string name="Encourage_authors">Encourage authors</string>
    <string name="copyright_information">Copyright information</string>
    <string name="sir_we_were_meant_to_be">Sir, We Were Meant to Be</string>
    <string name="magazine_introduction">Magazine Introduction</string>
    <string name="magazine_details">Magazine Details</string>
    <string name="add_a_comment">Add a Comment</string>
    <string name="Author_caps">AUTHOR</string>
    <string name="Publish_at">PUBLISH AT</string>
    <string name="Related_Books">Related Books</string>
    <string name="populars_with_same_genres">Populars with Same Genres</string>
    <string name="Comments">Comments</string>
    <string name="Write_your_comments">Write your comments</string>
    <string name="remove_from_library">Remove from Library</string>
    <string name="add_to_library">Add to Library</string>
    <string name="free">Free</string>
    <string name="my_library">My Library</string>
    <string name="paid">Paid</string>
    <string name="brought">Brought</string>
    <string name="downloaded">Downloaded</string>
    <string name="by">By</string>
    <string name="chapters">Chapters</string>
    <string name="chapter">Chapter</string>
    <string name="buy_now">Buy Now</string>
    <string name="read_now">Read Now</string>
    <string name="pack_up">PACK UP</string>
    <string name="show_all">SHOW ALL</string>
    <string name="please_enter_comment">Please, enter comment.</string>
    <string name="already_download">Already downloaded.</string>
    <string name="magazine_download_success">Magazine download success</string>
    <string name="book_download_success">Book download success</string>
    <string name="please_try_again">Please try again.</string>
    <string name="let_me_recommend_you_this_application_to_read_full_book">Let me recommend you this application to read full content.</string>
    <string name="My_Purchase_Books">My Purchase Books</string>
    <string name="ALLOW_PERMISSION">ALLOW PERMISSION</string>
    <string name="title_home">Home</string>
    <string name="title_genres">Genres</string>
    <string name="title_magazine">Magazines</string>
    <string name="title_featured">Featured</string>
    <string name="title_search">Search</string>
    <string name="title_bookmark">Bookmark</string>
    <string name="title_library">Library</string>
    <string name="title_Premium">Premium</string>
    <string name="title_settings">Settings</string>
    <string name="title_profile">Profile</string>
    <string name="isRTL">false</string>
    <string name="internet_connection">Internet connection not available</string>
    <string name="permission_desc">Now we need your permission to continue use the application perfectly</string>
    <string name="permission_title">Everything is okay</string>
    <string name="profile">Profile</string>
    <string name="save">save</string>
    <string name="my_Purchase_book">My Transactions</string>
    <string name="my_downloaded_book">My Library</string>
    <string name="please_select_subscription_package">Please Select Subscription Package.</string>
    <string name="enable_push_notification">Enable push notification</string>
    <string name="enable_theme">Enable Day/Night mode</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="locally_cached_data">locally cached data</string>
    <string name="Privacy_policy">Privacy policy</string>
    <string name="Become_Author">Become Author</string>
    <string name="balance">Balance</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to Logout ?</string>
    <string name="logout">Logout</string>
    <string name="rate_app">Rate App</string>
    <string name="share_app">Share with Friends</string>
    <string name="about_us">About Us</string>
    <string name="terms_and_conditions">Terms &amp; Conditions</string>
    <string name="downloading">Downloading...</string>
    <string name="loading">Loading...</string>
    <string name="please_wait">please wait...</string>
    <string name="change_language">Language</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="add_rate">Add Rate</string>
    <string name="Read">Read</string>
    <string name="my_package">Subscription</string>
    <string name="title_reward">Wallet</string>
    <string name="latest_update">Latest Update : </string>
    <string name="contents">Contents</string>
    <string name="do_you_want_to_exit">Do you want to exit ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="expires_on">Expires on</string>
    <string name="delete">DELETE</string>
    <string name="update">Update</string>
    <string name="pay_with">Pay with</string>
    <string name="pay">PAY</string>
    <string name="wallet_balance">Wallet balance</string>
    <string name="payment_gateways">Payment gateways</string>
    <string name="recharge_your_wallet">Recharge your wallet</string>
    <string name="add_to_wallet">Add to wallet</string>
    <string name="enter_amount">Enter custom amount...</string>
    <string name="upload_book">Upload Book</string>
    <string name="upload_magazine">Upload Magazine</string>
    <string name="add_documents">Add Documents!</string>
    <string name="upload_new_doc_desc">Upload your new Book or Magazine.</string>
    <string name="update_document_visibility">Update Document Visibility!</string>
    <string name="active">Active</string>
    <string name="inactive">InActive</string>
</resources>