<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundcolor"
    android:padding="15dp"
    tools:context=".Activity.PermissionActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="50dp"
                android:fontFamily="@font/roboto_bold"
                android:letterSpacing="0.02"
                android:padding="20dp"
                android:text="@string/permission_title"
                android:textAlignment="center"
                android:textColor="?attr/textcolor"
                android:textSize="20dp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                app:srcCompat="@drawable/ic_permission" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="60dp"
                android:fontFamily="@font/roboto_medium"
                android:letterSpacing="0.02"
                android:padding="20dp"
                android:text="@string/permission_desc"
                android:textAlignment="center"
                android:textColor="?attr/textcolor" />

        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_allow_permission"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            app:cardBackgroundColor="?attr/textcolor"
            app:cardCornerRadius="8dp"
            app:cardUseCompatPadding="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:letterSpacing="0.05"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:shadowColor="@color/extraLightGray"
                android:text="@string/ALLOW_PERMISSION"
                android:textColor="?attr/whitelightbackground" />

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</RelativeLayout>
