<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="locale"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_bor_top"
        android:backgroundTint="?attr/cardbackround"
        android:orientation="vertical">

        <!--Title & Close-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:text="@string/pay_with"
                android:textColor="?attr/textcolor"
                android:textSize="@dimen/text_16" />

            <LinearLayout
                android:id="@+id/lyClose"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:gravity="center">

                <TextView
                    android:layout_width="23dp"
                    android:layout_height="23dp"
                    android:background="@drawable/ic_close"
                    android:backgroundTint="?attr/icontintcolor"
                    android:gravity="center_vertical" />

            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:orientation="vertical">

            <!--Pay using & Confirm-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <!--Pay using-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioGroup
                        android:id="@+id/radioGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/rbWallet"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/colorPrimaryDark"
                            android:checked="true"
                            android:fontFamily="@font/roboto_medium"
                            android:text="@string/wallet_balance"
                            android:textColor="?attr/textcolor"
                            android:textSize="@dimen/default_texts" />

                        <RadioButton
                            android:id="@+id/rbPaymentGateways"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/colorPrimaryDark"
                            android:fontFamily="@font/roboto_medium"
                            android:text="@string/payment_gateways"
                            android:textColor="?attr/textcolor"
                            android:textSize="@dimen/default_texts" />

                    </RadioGroup>

                </LinearLayout>

                <!--Confirm-->
                <LinearLayout
                    android:id="@+id/lyConfirm"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/round_gradient_bg_like_gift"
                    android:gravity="center">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/roboto_bold"
                        android:gravity="center"
                        android:text="@string/pay"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_16" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>